@@ -39,6 +39,8 @@ SQL editor's right mouse menu offers to execute SQLs.
 
 Bug fixes:
 
+Code completion: When a completion entry was selected by mouse click to SQL editor lost focus.
+
 SQL result: Display of current row and column, selection count and summing didn't work after tables was made editable.
 
 SQL result: Fixed tooltips of mark duplicates buttons and menu items.
